fix card shrinking on mobile

--- a/src/sass/myservice-pages-authenticated-home.scss
+++ b/src/sass/myservice-pages-authenticated-home.scss
@@ -35,6 +35,7 @@
 	min-height: 200px;
 	-webkit-box-shadow: 1px 3px 8px 1px rgba(0,0,0,0.25);
 	box-shadow: 1px 3px 8px 1px rgba(0,0,0,0.25);
+	width: 100%;
 	h3 {
 		text-transform: uppercase;
 		padding: 0 1em;
@@ -89,7 +90,8 @@
 	&.card-shrink {
 		opacity: 0;
 		width: 0%;
-		transition: width 1s 0s;
+                height: 0px;
+		transition: width 1s 0s, height 1s 0s;
 	}
 }
 // Message for non continuous full time serving members
